...
            // Button to toggle audio output selection.
            Button {
                isAudioOutputSelectionVisible.toggle()
            } label: {
                glassToolbarIcon(AudioOutputManager.shared.currentRouteIcon)
            }
            .accessibilityIdentifier("AudioOutputButton")
            .help(LocalizedStringKey("Audio Output"))
            .applyFocusEffectDisabled()
            .popover(isPresented: $isAudioOutputSelectionVisible) {
                AudioOutputSelectionView()
                .compatGlassBackgroundEffect(.sidebar)
            }
...
